fix: lists spacing and styles

--- a/assets/scss/compat/_elementor.scss
+++ b/assets/scss/compat/_elementor.scss
@@ -3,4 +3,8 @@
   ul, ol {
     padding-left: $spacing-sm;
   }
+
+  ul {
+    list-style: inherit;
+  }
 }
