--- a/assets/scss/elements/_content.scss
+++ b/assets/scss/elements/_content.scss
@@ -84,6 +84,7 @@ pre {
   }
 
   ul, ol {
+    padding-left: $spacing-sm;
     li {
       line-height: 2em;
       margin-bottom: $spacing-xs;
