--- a/style-rtl.css
+++ b/style-rtl.css
@@ -50,6 +50,10 @@ h6 {
   font-weight: normal;
 }
 
+ul {
+  list-style: none;
+}
+
 button,
 input,
 select,
@@ -1785,6 +1789,9 @@ pre {
 .nv-content-wrap > ul, .nv-content-wrap > ol, .excerpt-wrap > ul, .excerpt-wrap > ol {
   margin: 20px 0;
 }
+.nv-content-wrap ul, .nv-content-wrap ol, .excerpt-wrap ul, .excerpt-wrap ol {
+  padding-right: 20px;
+}
 .nv-content-wrap ul li, .nv-content-wrap ol li, .excerpt-wrap ul li, .excerpt-wrap ol li {
   line-height: 2em;
   margin-bottom: 10px;
@@ -2635,4 +2642,7 @@ hr {
 }
 .neve-main .elementor ul, .neve-main .elementor ol {
   padding-right: 20px;
+}
+.neve-main .elementor ul {
+  list-style: inherit;
 }
